WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133476
[CSSRegions] Region with border radius and overflow:hidden does not clip content
https://bugs.webkit.org/show_bug.cgi?id=133476
Summary
[CSSRegions] Region with border radius and overflow:hidden does not clip content
Mihnea Ovidenie
Reported
2014-06-03 07:44:56 PDT
Created
attachment 232424
[details]
Test case In the attached sample, the content (yellow background) displayed in a region with overflow: hidden and border-radius spills outside the region.
Attachments
Test case
(702 bytes, text/html)
2014-06-03 07:44 PDT
,
Mihnea Ovidenie
no flags
Details
Patch
(4.57 KB, patch)
2014-06-14 13:07 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(502.58 KB, application/zip)
2014-06-14 17:21 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2014-06-14 13:07:02 PDT
Created
attachment 233117
[details]
Patch
Build Bot
Comment 2
2014-06-14 17:21:19 PDT
Comment on
attachment 233117
[details]
Patch
Attachment 233117
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6590869830369280
New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 3
2014-06-14 17:21:22 PDT
Created
attachment 233131
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Radu Stavila
Comment 4
2014-06-16 03:25:00 PDT
Looks good.
Andrei Bucur
Comment 5
2014-06-16 07:50:14 PDT
Comment on
attachment 233117
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2014-06-16 22:36:11 PDT
Comment on
attachment 233117
[details]
Patch Clearing flags on attachment: 233117 Committed
r170045
: <
http://trac.webkit.org/changeset/170045
>
WebKit Commit Bot
Comment 7
2014-06-16 22:36:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug