[CSSRegions] Region with border radius and overflow:hidden does not clip content https://bugs.webkit.org/show_bug.cgi?id=133476

Reviewed by Andrei Bucur.

Source/WebCore:
When setting the clip before painting the named flow content,
use the region's foreground rect to take the region's border radius
into account if needed.

Test: fast/regions/region-border-radius-overflow-clip.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintFlowThreadIfRegionForFragments):

LayoutTests:
* fast/regions/region-border-radius-overflow-clip-expected.html: Added.
* fast/regions/region-border-radius-overflow-clip.html: Added.


Canonical link: https://commits.webkit.org/151918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170045 268f45cc-cd09-0410-ab3c-d52691b4dbfc