Source/WebCore/rendering/RenderLayer.cpp
@@ -6744,7 +6744,7 @@ void RenderLayer::paintFlowThreadIfRegionForFragments(const LayerFragments& frag
     for (size_t i = 0; i < fragments.size(); ++i) {
         const LayerFragment& fragment = fragments.at(i);
 
-        ClipRect clipRect = fragment.backgroundRect;
+        ClipRect clipRect = fragment.foregroundRect;
         if (flowFragment->shouldClipFlowThreadContent())
             clipRect.intersect(regionClipRect);
 
